--- a/KnockOutDemo/Views/Shared/_Layout.cshtml
+++ b/KnockOutDemo/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MVC CRUD Using Knockout JS", "Read", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Knockout JS Demo", "Read", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - SibeeshPassion</p>
+            <p>&copy; @DateTime.Now.Year - Brajesh Kumar</p>
         </footer>
     </div>
 
